--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Revel Mini</string>
+    <string name="start_ride">Start Ride</string>
+    <string name="reserve">Reserve</string>
+    <string name="paused">Paused</string>
+    <string name="end">End Ride</string>
+    <string name="status_format">Status : %1s</string>
+    <string name="no_rides">No Rides</string>
+    <string name="nah">N/A</string>
+    <string name="cancel_reservation">Cancel Reservation</string>
 </resources>
